<resources>
    <string name="app_name">Byoosi POS</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_email_optional">Enter Email (Optional)</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="msg_no_internet">No Internet Available. Please check your network connection.</string>
    <string name="please_enter_email_address">Please enter email address!</string>
    <string name="please_enter_password">Please enter password!</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="add_customer">Add Customer</string>
    <string name="please_enter_name">Please enter name</string>
    <string name="please_enter_mobile_number">Please entar mobile number</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="please_enter_valid_email_address">Please enter valid email address!</string>
    <string name="please_enter_valid_mobile_number">Please enter valid mobile number!</string>
    <string name="colom">:</string>
    <string name="cart_item_count">You have %d items in cart</string>
    <string name="enter_amount">Enter Amount To Pay</string>
    <string name="action_print">Print</string>
    <string name="currency">USh</string>
    <string name="price">USh %.2f</string>
    <string name="total_stock">Current Stock : %d %s</string>
    <string name="total_stock_inner">Total Stock : %d</string>
    <string name="paid">Paid</string>
    <string name="unpaid">Unpaid</string>
    <string name="partially_paid">Partially Paid</string>
    <string name="quantity_x_price">%d X %.2f</string>
    <string name="login_failed">Login Failed!</string>
    <string name="products">Products</string>
    <string name="my_cart">My Cart</string>
    <string name="invoice">Invoice</string>
    <string name="customers">Customers</string>
    <string name="sales_reports">Sales Report</string>
    <string name="make_payment">make payment</string>
    <string name="change_payment_status">Make Payment</string>
    <string name="cancel">Cancel Invoice</string>
    <string name="remaining_amount">Remaining Amount</string>
    <string name="paid_amount">Paid Amount</string>
    <string name="total_amount">Total Amount</string>
    <string name="customer_email">Customer Email</string>
    <string name="customer_number">Customer Number</string>
    <string name="customer_nama">Customer Name</string>
    <string name="invoice_number">Invoice Number</string>
    <string name="search_customer">Search Customer</string>
    <string name="search_product">Search Product</string>
    <string name="other_warehouses">Other Stores:</string>
    <string name="save">Save</string>
    <string name="continue_text">Continue</string>
    <string name="enter_quantity">Enter Quantity</string>
    <string name="product_is_out_of_stock">Product is out Of Stock</string>
    <string name="out_of_stock">Out Of Stock.</string>
    <string name="okay">Okay</string>
    <string name="unknown_status">unknown</string>
    <string name="please_enter_url">Please Enter Url</string>
    <string name="select_mode_of_payment">Select Mode of Payment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="total_price">Total Price</string>

</resources>