<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_12sdp"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical"
    android:padding="@dimen/_12sdp">

    <EditText
        android:id="@+id/etName"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etEmail"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:hint="@string/enter_email_optional"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/etMobileNo"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:hint="@string/enter_mobile_number"
        android:inputType="number" />

    <Button
        android:id="@+id/btnAddCustomer"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:text="@string/add_customer" />
</LinearLayout>