<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/_16sdp">

    <!-- Spinner for Mode of Payment -->
    <Spinner
        android:id="@+id/spinnerModeOfPayment"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:prompt="@string/select_mode_of_payment"/>

    <!-- EditText for Amount -->
    <EditText
        android:id="@+id/etAmount"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:hint="@string/enter_amount"
        android:inputType="numberDecimal" />

    <!-- Button for Continue -->
    <Button
        android:id="@+id/btnContinue"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:text="@string/continue_text" />
</LinearLayout>
