<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_12sdp"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical"
    android:padding="@dimen/_12sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/colom"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4sdp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/colom"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp" />


        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4sdp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:text="@string/mobile_no"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/colom"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp" />


        <TextView
            android:id="@+id/tvMobile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp" />
    </LinearLayout>
</LinearLayout>